src/app/components/board/board.component.scss
@use "~src/styles/layout/_toolbar";

.board {
  height: 85%;
  padding: 3rem;

  display: flex;
  justify-content: space-evenly;
  overflow: auto;
}

.add-board-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;

  button {
    width: 20%;

    .main-content {
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
      align-items: center;
    }
  }
}

